# jetblack-order-book

./: README.md  pyproject.toml
jetblack_order_book/: __init__.py  abstract_types.py  aggregate_order.py  aggregate_order_side.py  comparable.py  constants.py  exchange_order_book.py  fill.py  limit_order.py  linq.py  messages.py  order.py  order_book.py  order_book_manager.py  order_manager.py  order_repo.py  order_types.py  orders.py  readers.py  side.py  start.py  utils.py
jetblack_order_book/plugins/: __init__.py  book_or_cancel.py  fill_or_kill.py  immediate_or_cancel.py  vanilla.py
order_book/: linq.py  messages.py  orders.py  start.py
tests/: test_exchange_order_book.py  test_limit_order.py  test_order_book.py
tests/order_book/: test_amend_size.py  test_book_or_cancel.py  test_cancel.py  test_cross.py  test_fill_or_kill.py  test_format.py  test_immediate_or_cancel.py  test_order_book.py  test_partial_fill.py  test_stop.py  test_time_priority.py
